--- a/css/tempo.css
+++ b/css/tempo.css
@@ -68,7 +68,7 @@ rect.scatterBorderRect {
 
 .linechartData {
 	fill: none;
-	stroke-width: 1px;
+	stroke-width: 0.5px;
 	stroke-opacity: 0.8;
 }
 .xLinechart {
@@ -83,7 +83,8 @@ rect.scatterBorderRect {
 .brush .extent 
 {
 	stroke: #555555;
-	fill-opacity: 0.15;
-	shape-rendering: crispEdges;
+	fill-opacity: 0.14;
 	stroke-width: 0.5px;
+	/*shape-rendering: crispEdges;*/
+
 }
