Toggle between superimposed and separate line charts

--- a/css/tempo.css
+++ b/css/tempo.css
@@ -73,7 +73,7 @@ rect.scatterBorderRect {
 
 .linechartData {
 	fill: none;
-	stroke-width: 0.5px;
+	stroke-width: 1px;
 	stroke-opacity: 0.8;
 }
 .xLinechart {
@@ -81,7 +81,7 @@ rect.scatterBorderRect {
 }
 
 .yLinechart {
-	stroke: #b2182b;
+	stroke: #002db3;
 	/* slightly lighter shade of red #d6604d */
 }
 
